<resources>
    <string name="app_name">Random Player</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_album_content_list">AlbumContentList</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="last_added">Last Added</string>
    <string name="more">MORE</string>
    <string name="pref_general">General</string>
    <string name="pref_theme">Design</string>
    <string name="pref_scan">Scan Files</string>
    <string name="pref_status_trans">Fully Transparent Statusbar</string>
    <string name="pref_nav_trans">Fully Transparent Navigationbar</string>
    <string name="pref_draw_over">Shade over album art</string>
    <string name="pref_scan_sum">Can\'t find your song? Lets Scan.</string>
    <string name="pref_gplus_com">Google+ Community</string>
    <string name="pref_gplus_com_sum">Join the community to share with us your feedback</string>
    <string name="pref_gplus">Google+ Profile</string>
    <string name="pref_gplus_sum">Follow developer of this application on Google+</string>
    <string name="pref_twitter">Twitter</string>
    <string name="pref_twitter_sum">Follow developer of this application on Twitter</string>
    <string name="pref_home_view">Home Screen</string>
    <string name="pref_album_view">Album Screen</string>
    <string name="pref_player_view">Player Screen</string>
    <string name="pref_grid_num">Number of Columns</string>
    <string name="pref_grid_num_sum">For grids</string>
    <string name="pref_extend_tabs">Extend tabs to fit screen</string>
    <string name="pref_fast_scroll">Enable Fast Scroll</string>
    <string name="pref_fast_scroll_sum">Fast Scroll will only appear on long lists</string>
    <string name="ok">OK</string>
    <string name="storage_permission">We need Storage permission in order to access songs</string>
    <string name="playlist">Playlist</string>
    <string name="shuffle">Shuffle</string>
    <string name="shuffle_caps">SHUFFLE</string>
    <string name="play">Play</string>
    <string name="play_next">Play Next</string>
    <string name="add">Add</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="choose_playlist">Choose playlist</string>
    <string name="close">Close</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="play_caps">PLAY</string>
    <string name="delete">Delete</string>
    <string name="cant_play_song">Can\'t play this song</string>
    <string name="nothing_to_play">Nothing to play</string>
    <string name="up_next">Up Next</string>
    <string name="rename">Rename</string>
    <string name="songs_uppercase">SONGS</string>
    <string name="api">911da172e486f9339ebc82b65ee89993</string>
    <string name="artist_fetch_url">http://ws.audioscrobbler.com/2.0/?method=artist.getinfo</string>
    <string name="dont_leave_blank">Don\'t leave blank</string>
    <string name="okay">Okay</string>
    <string name="play_only">Play only</string>
    <string name="add_playing_queue">Add to playing queue</string>
    <string name="open_album">Open album</string>
    <string name="open_artist">Open Artist</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="text">Text</string>
    <string name="file">File</string>
    <string name="share_song_file">Share Song File</string>
    <string name="currently_listening_to">Currently listening to&#160;</string>
    <string name="by">&#160;by&#160;</string>
    <string name="share_using">Share using</string>
    <string name="share_as">Share as</string>
    <string name="song_name"><![CDATA[<b>Song name:&nbsp;</b>]]></string>
    <string name="album_name"><![CDATA[<b>Album name:&nbsp;</b>]]></string>
    <string name="artist_name"><![CDATA[<b>Artist Name:&nbsp;</b>]]></string>
    <string name="file_path"><![CDATA[<b>File Path:&nbsp;</b>]]></string>
    <string name="file_name"><![CDATA[<b>File name:&nbsp;</b>]]></string>
    <string name="file_size"><![CDATA[<b>File size:&nbsp;</b>]]></string>
    <string name="bitrate"><![CDATA[<b>Bitrate:&nbsp;]]></string>
    <string name="samplingrate"><![CDATA[<b>Sampling Rate:&nbsp;</b>]]></string>
    <string name="format"><![CDATA[<b>Format:&nbsp;]]></string>
    <string name="write_setting_permission">Need Write Setting Permission in order to set Ringtone</string>
    <string name="ringtone_permission_title">Permission Required</string>
    <string name="ringtone_permission_content">We need Permission to change settings for setting your Ringtone. We will not do anything else!</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="search">Search</string>
    <string name="cant_proceed">Can\'t Proceed</string>
    <string name="cant_proceed_msg">Can\'t proceed further to open music player \n As we have not granted all permission required to start player. Would you like to accept those permissions again?</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_shuffle_all">Shuffle All</string>
    <string name="action_play">Play</string>
    <string name="action_add_to_playlist">Add to Playlist</string>
    <string name="action_edit_track_info">Edit Track info</string>
    <string name="action_track_info">Track info</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_play_next">Play Next</string>
    <string name="action_add_to_q">Add to Queue</string>
    <string name="action_set_as_ringtone">Set as Ringtone</string>
</resources>