<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play"
        android:title="@string/action_play"
        android:actionViewClass="android.widget.ImageView"/>


    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next"
        />
    <item
        android:id="@+id/action_add_to_q"
        android:title="@string/action_add_to_q"
        />


    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist"
        />

    <item
        android:id="@+id/action_track_info"
        android:title="@string/action_track_info"
        />

    <item
        android:id="@+id/action_edit_track_info"
        android:title="@string/action_edit_track_info"
        />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        />

    <item
        android:id="@+id/action_set_as_ringtone"
        android:title="@string/action_set_as_ringtone"
        />
</menu>